# pose2texture

./: CMakeLists.txt  pose2texture.cpp  pose2texture.project
